tests/errors/missing_quotes.peb
// Test: Missing quotes in string
display(Hello world)
